--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@200;300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400&display=swap');
 
 .main__text h1 {
-  line-height: 1.2;
-  font-family: 'Inter Tight', sans-serif;
+  line-height: 1.3;
+  font-family: 'Manrope', sans-serif;
   font-weight: 400;
-  font-size: clamp(20px, calc(14.40px + 2.00vw), 40px);
+  font-size: clamp(24px, calc(14.40px + 2.00vw), 34px);
   -webkit-font-smoothing: antialiased;
   color: #1f1f1f;
 }
