--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@200;300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400&display=swap');
 
 .projects {
   display: flex;
@@ -7,14 +7,15 @@
 
 .project__title {
   margin: 0;
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .project-short__description {
   margin: 8px 0 0 0;
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 300;
   font-size: 14px;
 }
 
