--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500&display=swap');
 
 .main__text h1 {
   line-height: 1.3;
   font-family: 'Manrope', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: clamp(24px, calc(14.40px + 2.00vw), 34px);
   -webkit-font-smoothing: antialiased;
-  color: #1f1f1f;
+  color: #1A1A1A;
+  margin: 0;
 }
 
 .profile__container {
