--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -145,5 +145,5 @@ hr {
   margin: 30px 0 0 80px;
   border: none;
   height: 1px;
-  background-color: #d5d9d9; /* Modern Browsers */
+  background-color: #d5d9d9; 
 }
