--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -142,7 +142,7 @@ font-size: .5px;
 }
 
 hr {
-  margin: 30px 0 0 80px;
+  margin: 30px 0 0 115px;
   border: none;
   height: 1px;
   background-color: #d5d9d9; 
@@ -156,4 +156,11 @@ hr {
 
 .img-container img {
   border-radius: 5px;
+}
+
+.project-icon {
+  height: 100px;
+  width: 100px;
+  border-radius: 5px;
+  margin-right: 15px;
 }
