--- a/src/UI/ProjectModal.module.css
+++ b/src/UI/ProjectModal.module.css
@@ -16,7 +16,6 @@
   padding: 2.5rem 3rem;
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
-  width: 55%;
   border: 1px solid #d5d9d9;
   animation: slideIn .2s forwards;
   display: flex;
@@ -24,7 +23,12 @@
   font-family: 'Manrope', sans-serif;
   overflow: auto;
   overflow-y: auto;
-  max-height: calc(100vh - 100px)
+  max-height: calc(100vh - 100px);
+  flex: 1;
+  margin-left: auto;
+  margin-right: auto;
+  width: 930px;
+  max-width: 100%;
 }
 
 @keyframes slideIn {
@@ -37,4 +41,12 @@
 .modal {
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 988px) {
+  .content {
+    width: 92%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
