--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -16,5 +16,20 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0 255px;
+  flex: 1;
+  margin-left: auto;
+  margin-right: auto;
+  width: 930px;
+  max-width: 100%;
+}
+
+@media (max-width: 988px) {
+  .profile__container {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    width: 90%;
+  }
+  .main__text h1 {
+    margin-top: 30px;
+  }
 }
