--- a/src/UI/ProjectModal.module.css
+++ b/src/UI/ProjectModal.module.css
@@ -3,7 +3,8 @@
 .backdrop {
   position: fixed;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   z-index: 20;
   background-color: #f5f5f5;
 }
@@ -13,7 +14,7 @@
   position: fixed;
   top: 4vh;
   background-color: white;
-  padding: 2.5rem 3rem;
+  padding: 2rem 1.5rem;
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
   border: 1px solid #d5d9d9;
@@ -29,6 +30,28 @@
   margin-right: auto;
   width: 930px;
   max-width: 100%;
+  /* display: flex; */
+  /* -webkit-box-align: center; */
+/* flex-direction: column;
+background-color: white;
+height: 100vh;
+position: absolute;
+top: 4vh; */
+
+/* display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+min-height: 100vh; */
+/* height: 100%; */
+/* flex: 1; */
+/* margin-left: auto;
+margin-right: auto; */
+/* width: 930px;
+max-width: 100%;
+padding: 30px 15px;
+z-index: 30;
+background-color: white; */
 }
 
 @keyframes slideIn {
@@ -44,9 +67,5 @@
 }
 
 @media (max-width: 988px) {
-  .content {
-    width: 92%;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+
 }
