--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -15,21 +15,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   flex: 1;
   margin-left: auto;
   margin-right: auto;
   width: 930px;
   max-width: 100%;
+  overflow: hidden;
 }
 
-@media (max-width: 988px) {
-  .profile__container {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: 90%;
-  }
-  .main__text h1 {
-    margin-top: 30px;
-  }
+@media (max-width: 990px) {
+
 }
