--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -213,4 +213,9 @@ button:hover {
     height: 100%;
     width: 100%;
   }
+  .project-btns {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 }
