--- a/src/UI/ProjectModal.module.css
+++ b/src/UI/ProjectModal.module.css
@@ -24,34 +24,13 @@
   font-family: 'Manrope', sans-serif;
   overflow: auto;
   overflow-y: auto;
-  max-height: calc(100vh - 100px);
+  max-height: 100%;
+  height: 100vh;
   flex: 1;
   margin-left: auto;
   margin-right: auto;
   width: 930px;
   max-width: 100%;
-  /* display: flex; */
-  /* -webkit-box-align: center; */
-/* flex-direction: column;
-background-color: white;
-height: 100vh;
-position: absolute;
-top: 4vh; */
-
-/* display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-min-height: 100vh; */
-/* height: 100%; */
-/* flex: 1; */
-/* margin-left: auto;
-margin-right: auto; */
-/* width: 930px;
-max-width: 100%;
-padding: 30px 15px;
-z-index: 30;
-background-color: white; */
 }
 
 @keyframes slideIn {
