--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500&display=swap');
 
-footer {
+section {
   width: 100%;
   padding: 1rem 0;
   font-family: 'Manrope', sans-serif;
